# spacegameengine

./: .gitignore  .sconsign  CMakeLists.txt  Doxyfile  FindSGE.cmake  OWGetGCCVersion.cmake  SConstruct  config.h.in  config.hpp.in  config_paths.hpp.in  doxygen_index_page.hpp  http_post.hpp  index.html  index_page.hpp  main.cpp  make_distfiles_and_overlay  makecbproject.php  projects.ini  readme.txt  regen_cmake  scheduler.hpp  sge-config.cmake.in  sgegrep  sgestyle.css  spacegame-0.1_alpha1.ebuild  spacegameengine-0.1_alpha2.ebuild  spacegameengine-9999.ebuild  todo  todo.txt  upload_doc  win32_install.bat
alda/: CMakeLists.txt
alda/src/: CMakeLists.txt  exception.cpp  log.cpp  log_context.cpp  log_location.cpp  log_parameters.cpp  logger.cpp
alda/tests/: CMakeLists.txt  float.cpp  length_stream.cpp  signed.cpp  simple.cpp
doc/: CMakeLists.txt  Doxyfile.in  header.html  layout.xml  libs_files.txt  stylesheet.css  tutorial
doc/files/: audio.doxygen  main.doxygen  main.hpp  renderer.doxygen
doc/htmldoc/: index.html
examples/: CMakeLists.txt  anaglyph.cpp  anaglyph_flymake.cpp  anim.cpp  app_path.cpp  appdir.cpp  asio_window.cpp  audio_minimal.cpp  bitmapfont.cpp  bloom.cpp  bvh.cpp  caps.cpp  cg_simple.cpp  cie.cpp  collision.cpp  color_string_convert.cpp  config.cpp  config_path.cpp  configdir.cpp  console.cpp  control_scheme.cpp  cube_map.cpp  custom_cursor.cpp  display_mode.cpp  doppler.cpp  edit.cpp  font.cpp  fullscreen.cpp  gl_texture.cpp  graph.cpp  grid.cpp  gui.cpp  ini.cpp  input.cpp  input_only.cpp  intrusivesprite.cpp  json.cpp  lighting.cpp  line_drawer.cpp  line_of_sight.cpp  (+42 more)
examples/bvh/: CMakeLists.txt  benchmark.cpp  bvh_benchmark.cpp  bvh_planar.cpp  planar.cpp
examples/cegui/: CMakeLists.txt  cegui_text_demo.cpp  gui_text_demo.cpp  text_demo.cpp
examples/cg/: CMakeLists.txt  cg_blending.cpp  cg_matrix.cpp  cg_parameters.cpp  cg_pointsprites.cpp  cg_simple.cpp  cg_texture.cpp  ffp.cpp  parameters.cpp  pointsprites.cpp  simple.cpp  texture.cpp
examples/cg1/: CMakeLists.txt  ex04.cpp
examples/gui/: CMakeLists.txt  gui_main.cpp  gui_text_demo.cpp  main.cpp  text_demo.cpp
examples/include/: example_main.hpp
examples/opencl/: CMakeLists.txt  opencl_simple.cpp  opencl_syntax_checker.cpp  opencl_texture_read.cpp  openclsimple.cpp  openclsyntax_checker.cpp  opencltexture_read.cpp  simple.cpp  syntax_checker.cpp  texture_read.cpp
examples/projectile/: CMakeLists.txt  main.cpp  projectilemain.cpp
examples/rucksack/: CMakeLists.txt  box.cpp  enumeration.cpp  main.hpp  master_and_slaves.cpp  rucksack_box.cpp  rucksack_enumeration.cpp  rucksack_master_and_slaves.cpp  testbed.cpp  testbed.hpp  testbed_impl.cpp  testbed_impl.hpp  testbed_impl_fwd.hpp
examples/shader/: cube.cpp  main.cpp  raw.cpp
examples/tutorial/: CMakeLists.txt  font.cpp  sound_01.cpp  sound_02.cpp  sound_03.cpp  sprite_01.cpp  sprite_02.cpp  sprite_03.cpp  tutorial_01.cpp  tutorial_02.cpp
libs/: CMakeLists.txt
libs/audio/: CMakeLists.txt  files.txt
libs/bresenham/: CMakeLists.txt  files.txt
libs/bvh/: CMakeLists.txt  files.txt
libs/camera/: CMakeLists.txt  files.txt
libs/cegui/: CMakeLists.txt
libs/cg/: CMakeLists.txt  files.txt
libs/charconv/: CMakeLists.txt  files.txt
libs/config/: CMakeLists.txt  files.txt
libs/console/: CMakeLists.txt  files.txt
libs/consolegfx/: CMakeLists.txt  files.txt
libs/core/: CMakeLists.txt  files.txt
libs/cursor/: CMakeLists.txt  files.txt
libs/font/: CMakeLists.txt  files.txt
libs/fontbitmap/: CMakeLists.txt  files.txt
libs/fontdraw/: CMakeLists.txt  files.txt
libs/graph/: CMakeLists.txt  files.txt
libs/gui/: CMakeLists.txt  files.txt
libs/image/: CMakeLists.txt  config.hpp.in  files.txt
libs/image2d/: CMakeLists.txt  files.txt
libs/image3d/: CMakeLists.txt  files.txt
libs/imagecolor/: CMakeLists.txt  files.txt
libs/imageds/: CMakeLists.txt  files.txt
libs/imageds2d/: CMakeLists.txt  files.txt
libs/input/: CMakeLists.txt  files.txt
libs/line_drawer/: CMakeLists.txt  files.txt
libs/log/: CMakeLists.txt  files.txt
libs/media/: CMakeLists.txt  files.txt
libs/modelmd3/: CMakeLists.txt  files.txt
libs/modelobj/: CMakeLists.txt  files.txt
libs/noise/: CMakeLists.txt  files.txt
libs/opencl/: CMakeLists.txt  config.hpp.in  files.txt
libs/parse/: CMakeLists.txt  files.txt
libs/parseini/: CMakeLists.txt  files.txt
libs/parsejson/: CMakeLists.txt  files.txt
libs/plugin/: CMakeLists.txt  files.txt
libs/postprocessing/: CMakeLists.txt  files.txt
libs/projectile/: CMakeLists.txt  files.txt
libs/renderer/: CMakeLists.txt  config.hpp.in  files.txt
libs/renderercg/: CMakeLists.txt  files.txt
libs/rendereropengl/: CMakeLists.txt  files.txt
libs/resource_tree/: CMakeLists.txt  files.txt
libs/rucksack/: CMakeLists.txt  files.txt
libs/rucksackviewport/: CMakeLists.txt  files.txt
libs/scenic/: CMakeLists.txt  files.txt
plugins/: CMakeLists.txt
src/: CMakeLists.txt  accessor.hpp  algorithm.hpp  algorithm_impl.hpp  all_extensions.cpp  array2.hpp  asio.cpp  assert.cpp  auto_ptr.hpp  bad_lexical_cast.cpp  bin_io.hpp  bit.hpp  bitfield.hpp  bitwise_cast.hpp  bsp_tree.hpp  c_cast.hpp  callback_connection.hpp  cerr.cpp  cin.cpp  client_config.cpp  client_config.hpp  clog.cpp  codecvt.cpp  codecvt.hpp  com_deleter.hpp  config.hpp  cout.cpp  endianness.cpp  endianness.hpp  exception.cpp  exception.hpp  export.hpp  field.hpp  format.cpp  format.hpp  frames_counter.cpp  frames_counter.hpp  fstream.hpp  functional.hpp  funptr_cast.hpp  (+80 more)
test/: CMakeLists.txt  algorithm.cpp  anim.cpp  animtest.cpp  appdir.cpp  array.cpp  bitmapfont.cpp  bloom.cpp  bullet.cpp  chrono.cpp  cie.cpp  codecvt.cpp  collision.cpp  configdir.cpp  console.cpp  container.cpp  doppler.cpp  edit.cpp  field.cpp  fullscreen.cpp  function.cpp  gil.cpp  giltest.cpp  grid.cpp  gui.cpp  guitest.cpp  ini.cpp  intrusivesprite.cpp  io.cpp  json.cpp  log.cpp  math.cpp  menu.cpp  mergeimage.cpp  model.cpp  modifier.cpp  movetest.cpp  optional.cpp  plugin.cpp  pool.cpp  (+16 more)
tests/: CMakeLists.txt
tools/: CMakeLists.txt
(+28484 files in other folders)
