find_package(
	awl
	REQUIRED
)

include(
	AwlMainGenerator
)

find_package(
	mizuiro
	REQUIRED
)

option(
	INSTALL_EXAMPLES
	"Install the examples"
	OFF
)

set(
	INSTALL_EXAMPLE_DIR
	"${INSTALL_BINARY_DIR}"
	CACHE
	STRING
	"Custom example installation directory"
)

function(
	add_sge_example_base
	EXAMPLE_NAME
)
	set(
		SINGLE_ARGS
		CONSOLE_EXAMPLE
	)

	set(
		MULTI_ARGS
		SGE_DEPS
		ADDITIONAL_DEPS
		INCLUDE_DIRS
	)

	cmake_parse_arguments(
		""
		""
		"${SINGLE_ARGS}"
		"${MULTI_ARGS}"
		${ARGN}
	)

	sge_check_optional_deps(
		"The ${EXAMPLE_NAME} example"
		"${_SGE_DEPS}"
	)

	string(
		REPLACE
		"/"
		""
		FULL_NAME
		${EXAMPLE_NAME}
	)

	set(
		FULL_NAME
		"sge_example_${FULL_NAME}"
	)

	set(
		SOURCE_FILE
		"${EXAMPLE_NAME}.cpp"
	)

	if(
		_CONSOLE_EXAMPLE
	)
		add_executable(
			${FULL_NAME}
			${SOURCE_FILE}
		)
	else()
		awl_utils_add_portable_executable(
			${FULL_NAME}
			"example_main"
			${SOURCE_FILE}
		)

		target_link_libraries(
			${FULL_NAME}
			PRIVATE
			${awl_TARGET}
		)
	endif()

	fcppt_utils_set_target_compiler_flags(
		${FULL_NAME}
	)

	transform_sge_link_targets(
		"${_SGE_DEPS}"
		SGE_LIBRARIES_RESULT
	)

	target_include_directories(
		"${FULL_NAME}"
		PRIVATE
		"${_INCLUDE_DIRS}"
	)

	target_link_libraries(
		${FULL_NAME}
		PRIVATE
		${_ADDITIONAL_DEPS}
		${SGE_LIBRARIES_RESULT}
	)

	if(
		INSTALL_EXAMPLES
	)
		install(
			TARGETS
			${FULL_NAME}
			DESTINATION
			"${INSTALL_EXAMPLE_DIR}"
		)
	endif()
endfunction()

function(
	add_sge_example
	EXAMPLE_NAME
)
	set(
		MULTI_ARGS
		SGE_DEPS
		ADDITIONAL_DEPS
		INCLUDE_DIRS
	)

	cmake_parse_arguments(
		""
		""
		""
		"${MULTI_ARGS}"
		${ARGN}
	)

	add_sge_example_base(
		"${EXAMPLE_NAME}"
		SGE_DEPS
			${_SGE_DEPS}
		ADDITIONAL_DEPS
			${_ADDITIONAL_DEPS}
		INCLUDE_DIRS
			${FCPPT_UTILS_PROJECT_SOURCE_DIR}/examples/include
			${_INCLUDE_DIRS}
		CONSOLE_EXAMPLE
			FALSE
	)
endfunction()

function(
	add_sge_console_example
	EXAMPLE_NAME
)
	set(
		MULTI_ARGS
		SGE_DEPS
		ADDITIONAL_DEPS
		INCLUDE_DIRS
	)

	cmake_parse_arguments(
		""
		""
		""
		"${MULTI_ARGS}"
		${ARGN}
	)

	add_sge_example_base(
		"${EXAMPLE_NAME}"
		SGE_DEPS
			${_SGE_DEPS}
		ADDITIONAL_DEPS
			${_ADDITIONAL_DEPS}
		INCLUDE_DIRS
			${_INCLUDE_DIRS}
		CONSOLE_EXAMPLE
			TRUE
	)
endfunction()

add_sge_example(
	anaglyph
	SGE_DEPS
		sgecamera
		sgeconfig
		sgeimagecolor
		sgeinput
		sgelog
		sgemodelmd3
		sgerenderer
		sgesystems
		sgeviewport
		sgewindow
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
		${Boost_FILESYSTEM_LIBRARIES}
)

add_sge_console_example(
	app_path
	SGE_DEPS
		sgeconfig
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
		${Boost_FILESYSTEM_LIBRARIES}
)

add_sge_console_example(
	audio_minimal
	SGE_DEPS
		sgeaudio
		sgeconfig
		sgeplugin
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
		${Boost_FILESYSTEM_LIBRARIES}
)

add_sge_example(
	bitmapfont
	SGE_DEPS
		sgeconfig
		sgefont
		sgefontbitmap
		sgefontdraw
		sgeimagecolor
		sgeinput
		sgerenderer
		sgesystems
		sgeviewport
		sgewindow
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
		${Boost_FILESYSTEM_LIBRARIES}
)

add_sge_console_example(
	caps
	SGE_DEPS
		sgeconfig
		sgeplugin
		sgerenderer
		sgewindow
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
		${awl_TARGET}
		${Boost_FILESYSTEM_LIBRARIES}
)

add_sge_console_example(
	color_string_convert
	SGE_DEPS
		sgecore
		sgeimage
		sgeimagecolor
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
)

add_sge_console_example(
	config
	SGE_DEPS
		sgeconfig
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
		${Boost_FILESYSTEM_LIBRARIES}
)

add_sge_example(
	console
	SGE_DEPS
		sgeconfig
		sgeconsole
		sgeconsolegfx
		sgefont
		sgeimagecolor
		sgeinput
		sgerenderer
		sgesystems
		sgetexture
		sgeviewport
		sgewindow
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
		${Boost_FILESYSTEM_LIBRARIES}
)

add_sge_example(
	custom_cursor
	SGE_DEPS
		sgeconfig
		sgeimagecolor
		sgeinput
		sgelog
		sgerenderer
		sgesystems
		sgetexture
		sgeviewport
		sgewindow
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
		${Boost_FILESYSTEM_LIBRARIES}
)

add_sge_example(
	display_mode
	SGE_DEPS
		sgerenderer
		sgesystems
		sgeviewport
		sgewindow
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
)

add_sge_example(
	doppler
	SGE_DEPS
		sgeaudio
		sgeconfig
		sgeimagecolor
		sgeinput
		sgelog
		sgerenderer
		sgesprite
		sgesystems
		sgetexture
		sgeviewport
		sgewindow
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
		${Boost_FILESYSTEM_LIBRARIES}
)

add_sge_example(
	font
	SGE_DEPS
		sgefont
		sgefontdraw
		sgeimagecolor
		sgerenderer
		sgesystems
		sgeviewport
		sgewindow
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
)

add_sge_example(
	fullscreen
	SGE_DEPS
		sgeimagecolor
		sgelog
		sgerenderer
		sgesystems
		sgeviewport
		sgewindow
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
		${Boost_FILESYSTEM_LIBRARIES}
)

add_sge_example(
	graph
	SGE_DEPS
		sgegraph
		sgeimagecolor
		sgelog
		sgerenderer
		sgesystems
		sgeviewport
		sgewindow
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
		${Boost_FILESYSTEM_LIBRARIES}
)

add_sge_console_example(
	ini
	SGE_DEPS
		sgeparse
		sgeparseini
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
)

add_sge_example(
	input
	SGE_DEPS
		sgeconfig
		sgeconsole
		sgeconsolegfx
		sgefont
		sgeimagecolor
		sgeinput
		sgelog
		sgerenderer
		sgesystems
		sgetexture
		sgetimer
		sgeviewport
		sgewindow
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
		${Boost_FILESYSTEM_LIBRARIES}
)

add_sge_example(
	intrusivesprite
	SGE_DEPS
		sgeconfig
		sgeimagecolor
		sgeinput
		sgerenderer
		sgesprite
		sgesystems
		sgetexture
		sgeviewport
		sgewindow
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
		${Boost_FILESYSTEM_LIBRARIES}
)

add_sge_console_example(
	json
	SGE_DEPS
		sgeparse
		sgeparsejson
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
)

add_sge_example(
	lighting
	SGE_DEPS
		sgeconfig
		sgeimagecolor
		sgeimage2d
		sgerenderer
		sgesprite
		sgesystems
		sgetexture
		sgeviewport
		sgewindow
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
		${Boost_FILESYSTEM_LIBRARIES}
)

add_sge_example(
	line_drawer
	SGE_DEPS
		sgefont
		sgefontdraw
		sgeimagecolor
		sgeinput
		sgeline_drawer
		sgerenderer
		sgesystems
		sgetimer
		sgeviewport
		sgewindow
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
		${Boost_FILESYSTEM_LIBRARIES}
)

add_sge_example(
	line_of_sight
	SGE_DEPS
		sgeimagecolor
		sgeinput
		sgerenderer
		sgesprite
		sgesystems
		sgeviewport
		sgewindow
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
)

add_sge_console_example(
	log_path
	SGE_DEPS
		sgeconfig
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
		${Boost_FILESYSTEM_LIBRARIES}
)

if(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
	add_sge_example(
		linux_stats
		SGE_DEPS
			sgefont
			sgefontdraw
			sgegraph
			sgelog
			sgerenderer
			sgesystems
			sgeviewport
			sgewindow
			sgeimagecolor
			sgetimer
		ADDITIONAL_DEPS
			${fcppt_core_TARGET}
			${Boost_FILESYSTEM_LIBRARIES}
	)
endif()

add_sge_console_example(
	mergeimage
	SGE_DEPS
		sgecore
		sgeimagecolor
		sgeimage2d
		sgesystems
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
		${Boost_FILESYSTEM_LIBRARIES}
)

add_sge_example(
	multi_texture
	SGE_DEPS
		sgeconfig
		sgeimagecolor
		sgeinput
		sgemedia
		sgerenderer
		sgesystems
		sgeviewport
		sgewindow
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
		${Boost_FILESYSTEM_LIBRARIES}
)

add_sge_example(
	multi_texture_sprite
	SGE_DEPS
		sgeconfig
		sgeimagecolor
		sgeinput
		sgerenderer
		sgesprite
		sgesystems
		sgetexture
		sgeviewport
		sgewindow
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
		${Boost_FILESYSTEM_LIBRARIES}
)

add_sge_example(
	noise
	SGE_DEPS
		sgeimagecolor
		sgeimage2d
		sgelog
		sgerenderer
		sgesprite
		sgesystems
		sgetexture
		sgeviewport
		sgewindow
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
		${Boost_FILESYSTEM_LIBRARIES}
)

add_sge_console_example(
	opengl
	SGE_DEPS
		sgerenderer
		sgerendereropengl
		sgesystems
		sgeviewport
		sgewindow
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
		${Boost_FILESYSTEM_LIBRARIES}
)

add_sge_example(
	ortho_view
	SGE_DEPS
		sgecamera
		sgeconfig
		sgeimagecolor
		sgeinput
		sgelog
		sgerenderer
		sgesprite
		sgesystems
		sgetexture
		sgeviewport
		sgewindow
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
		${Boost_FILESYSTEM_LIBRARIES}
)

add_sge_console_example(
	plugin
	SGE_DEPS
		sgeaudio
		sgeconfig
		sgefont
		sgeimage2d
		sgeinput
		sgelog
		sgeplugin
		sgerenderer
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
		${fcppt_log_TARGET}
		${Boost_FILESYSTEM_LIBRARIES}
)

add_sge_example(
	projectile/main
	SGE_DEPS
		sgeimagecolor
		sgeinput
		sgelog
		sgeprojectile
		sgerenderer
		sgesystems
		sgeviewport
		sgewindow
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
		${Boost_FILESYSTEM_LIBRARIES}
)

add_sge_console_example(
	resource_tree
	SGE_DEPS
		sgeconfig
		sgeresource_tree
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
		${fcppt_filesystem_TARGET}
		${Boost_FILESYSTEM_LIBRARIES}
)

add_sge_example(
	scenic
	SGE_DEPS
		sgeconfig
		sgeimagecolor
		sgeinput
		sgerenderer
		sgesystems
		sgeviewport
		sgewindow
		sgescenic
		sgecamera
		sgegraph
		sgeparsejson
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
		${Boost_FILESYSTEM_LIBRARIES}
		${Boost_PROGRAM_OPTIONS_LIBRARIES}
)

add_sge_example(
	screenshot
	SGE_DEPS
		sgeconfig
		sgeimagecolor
		sgeimage2d
		sgeinput
		sgerenderer
		sgesprite
		sgesystems
		sgetexture
		sgeviewport
		sgewindow
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
		${Boost_FILESYSTEM_LIBRARIES}
)

add_sge_console_example(
	sound
	SGE_DEPS
		sgeaudio
		sgeconfig
		sgelog
		sgesystems
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
		${Boost_FILESYSTEM_LIBRARIES}
)

add_sge_example(
	sprite_color
	SGE_DEPS
		sgeimagecolor
		sgeinput
		sgelog
		sgerenderer
		sgesprite
		sgesystems
		sgeviewport
		sgewindow
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
		${Boost_FILESYSTEM_LIBRARIES}
)

add_sge_example(
	sprite_color_texture
	SGE_DEPS
		sgeconfig
		sgeimagecolor
		sgeinput
		sgelog
		sgerenderer
		sgesprite
		sgesystems
		sgetexture
		sgeviewport
		sgewindow
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
		${Boost_FILESYSTEM_LIBRARIES}
)

add_sge_example(
	sprite_move
	SGE_DEPS
		sgeconfig
		sgeimagecolor
		sgeimage2d
		sgeinput
		sgerenderer
		sgesprite
		sgesystems
		sgetexture
		sgeviewport
		sgewindow
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
		${Boost_FILESYSTEM_LIBRARIES}
)

add_sge_example(
	stencil
	SGE_DEPS
		sgeconfig
		sgeimagecolor
		sgeinput
		sgerenderer
		sgesprite
		sgesystems
		sgetexture
		sgeviewport
		sgewindow
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
		${Boost_FILESYSTEM_LIBRARIES}
)

add_sge_example(
	swoosh
	SGE_DEPS
		sgeaudio
		sgeconfig
		sgeimagecolor
		sgeinput
		sgelog
		sgerenderer
		sgesprite
		sgesystems
		sgetexture
		sgeviewport
		sgewindow
		sgegraph
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
		${Boost_FILESYSTEM_LIBRARIES}
)

add_sge_example(
	target
	SGE_DEPS
		sgeconfig
		sgeimagecolor
		sgeimage2d
		sgeinput
		sgerenderer
		sgesprite
		sgesystems
		sgetexture
		sgeviewport
		sgewindow
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
		${Boost_FILESYSTEM_LIBRARIES}
)

add_sge_example(
	texture_filter
	SGE_DEPS
		sgecamera
		sgefont
		sgefontdraw
		sgeimagecolor
		sgeimage2d
		sgeinput
		sgerenderer
		sgesprite
		sgesystems
		sgetexture
		sgetimer
		sgeviewport
		sgewindow
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
		${Boost_FILESYSTEM_LIBRARIES}
)

add_sge_console_example(
	tutorial/sound_01
	SGE_DEPS
		sgeaudio
		sgeconfig
		sgesystems
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
		${Boost_FILESYSTEM_LIBRARIES}
)

add_sge_console_example(
	tutorial/sound_02
	SGE_DEPS
		sgeaudio
		sgeconfig
		sgesystems
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
		${Boost_FILESYSTEM_LIBRARIES}
)

add_sge_example(
	tutorial/sprite_03
	SGE_DEPS
		sgeconfig
		sgeinput
		sgerenderer
		sgesprite
		sgesystems
		sgetexture
		sgeviewport
		sgewindow
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
		${Boost_FILESYSTEM_LIBRARIES}
)

add_sge_example(
	vertex
	SGE_DEPS
		sgeimagecolor
		sgeinput
		sgerenderer
		sgesystems
		sgeviewport
		sgewindow
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
		${Boost_FILESYSTEM_LIBRARIES}
)

add_sge_example(
	vertex_index
	SGE_DEPS
		sgeimagecolor
		sgeinput
		sgerenderer
		sgesystems
		sgeviewport
		sgewindow
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
		${Boost_FILESYSTEM_LIBRARIES}
)

add_sge_example(
	vertex_planar
	SGE_DEPS
		sgeimagecolor
		sgeinput
		sgerenderer
		sgesystems
		sgeviewport
		sgewindow
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
		${Boost_FILESYSTEM_LIBRARIES}
)

add_sge_example(
	vertex_texture
	SGE_DEPS
		sgeconfig
		sgeinput
		sgerenderer
		sgesystems
		sgeviewport
		sgewindow
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
		${Boost_FILESYSTEM_LIBRARIES}
)

add_sge_example(
	volume_texture
	SGE_DEPS
		sgecamera
		sgeimagecolor
		sgeimage3d
		sgeinput
		sgerenderer
		sgesystems
		sgeviewport
		sgewindow
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
		${Boost_FILESYSTEM_LIBRARIES}
)

add_sge_example(
	window_without_input
	SGE_DEPS
		sgeimagecolor
		sgerenderer
		sgesystems
		sgeviewport
		sgewindow
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
		${Boost_FILESYSTEM_LIBRARIES}
)

add_subdirectory(
	bvh
)

add_subdirectory(
	cegui
)

add_subdirectory(
	cg
)

add_subdirectory(
	gui
)

add_subdirectory(
	opencl
)

add_subdirectory(
	rucksack
)
